--- a/src/techie/lambda/package.json
+++ b/src/techie/lambda/package.json
@@ -28,6 +28,7 @@
     "ask-sdk-model": "^1.29.0",
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
-    "oas3-tools": "^2.0.2"
+    "oas3-tools": "^2.0.2",
+    "uuid": "^8.3.0"
   }
 }
