--- a/src/techie/lambda/package.json
+++ b/src/techie/lambda/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "zip-package": "cd .. && rm -f package.zip && zip -r package.zip *",
+    "zip-lambda": "rm -f lambda.zip && zip -r lambda.zip *",
+    "zip-conversations": "cd .. && rm -f conversations.zip && zip -r conversations.zip dialogManagement/ response/"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,6 @@
     "ask-sdk-model": "^1.29.0",
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
-    "oas3-tools": "^2.0.2",
     "uuid": "^8.3.0"
   }
 }
