async return exercise routine from DDB #4

--- a/src/techie/lambda/package.json
+++ b/src/techie/lambda/package.json
@@ -30,6 +30,7 @@
     "ask-sdk-model": "^1.29.0",
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
+    "random": "^2.2.0",
     "uuid": "^8.3.0"
   }
 }
