--- a/src/techie/lambda/package.json
+++ b/src/techie/lambda/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/pirixtech/techie-buddy#readme",
   "dependencies": {
-    "ask-sdk-core": "^2.9.0",
+    "ask-sdk": "^2.9.0",
     "ask-sdk-model": "^1.29.0",
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
