--- a/src/techie/lambda/package.json
+++ b/src/techie/lambda/package.json
@@ -31,6 +31,9 @@
     "connect": "^3.2.0",
     "js-yaml": "^3.3.0",
     "random": "^2.2.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "i18next": "^19.4.4",
+    "lodash": "^4.17.15",
+    "sprintf-js": "^1.1.2"
   }
 }
